@@ -5,7 +5,7 @@ if config['mongoid']
   say_wizard "REMINDER: When creating a Rails app using Mongoid..."
   say_wizard "you should add the '-O' flag to 'rails new'"
   gem 'bson_ext', '>= 1.5.2'
-  gem 'mongoid', '>= 2.4.4'
+  gem 'mongoid', '>= 2.4.6'
 else
   recipes.delete('mongoid')
 end
